; ModuleID = '/home/carl/AnghaBench/libevent/extr_buffer.c_evbuffer_get_callbacks_.c'
source_filename = "/home/carl/AnghaBench/libevent/extr_buffer.c_evbuffer_get_callbacks_.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evbuffer = type { %struct.event_callback, i64 }
%struct.event_callback = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @evbuffer_get_callbacks_(%struct.evbuffer* %0, %struct.event_callback** %1, i32 %2) #0 {
  %4 = alloca %struct.evbuffer*, align 8
  %5 = alloca %struct.event_callback**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.evbuffer* %0, %struct.evbuffer** %4, align 8
  store %struct.event_callback** %1, %struct.event_callback*** %5, align 8
  store i32 %2, i32* %6, align 4
  store i32 0, i32* %7, align 4
  %8 = load %struct.evbuffer*, %struct.evbuffer** %4, align 8
  %9 = call i32 @EVBUFFER_LOCK(%struct.evbuffer* %8)
  %10 = load %struct.evbuffer*, %struct.evbuffer** %4, align 8
  %11 = getelementptr inbounds %struct.evbuffer, %struct.evbuffer* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %23

14:                                               ; preds = %3
  %15 = load i32, i32* %6, align 4
  %16 = icmp slt i32 %15, 1
  br i1 %16, label %17, label %18

17:                                               ; preds = %14
  store i32 -1, i32* %7, align 4
  br label %24

18:                                               ; preds = %14
  %19 = load %struct.evbuffer*, %struct.evbuffer** %4, align 8
  %20 = getelementptr inbounds %struct.evbuffer, %struct.evbuffer* %19, i32 0, i32 0
  %21 = load %struct.event_callback**, %struct.event_callback*** %5, align 8
  %22 = getelementptr inbounds %struct.event_callback*, %struct.event_callback** %21, i64 0
  store %struct.event_callback* %20, %struct.event_callback** %22, align 8
  store i32 1, i32* %7, align 4
  br label %23

23:                                               ; preds = %18, %3
  br label %24

24:                                               ; preds = %23, %17
  %25 = load %struct.evbuffer*, %struct.evbuffer** %4, align 8
  %26 = call i32 @EVBUFFER_UNLOCK(%struct.evbuffer* %25)
  %27 = load i32, i32* %7, align 4
  ret i32 %27
}

declare dso_local i32 @EVBUFFER_LOCK(%struct.evbuffer*) #1

declare dso_local i32 @EVBUFFER_UNLOCK(%struct.evbuffer*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
